--- a/_posts/2021-10-25-US-Denver.md
+++ b/_posts/2021-10-25-US-Denver.md
@@ -13,19 +13,19 @@ Colorado is a very peaceful state and my trip to Denver in spring is so unforget
 
 ### Downtown of Denver
 
-![image](../assets/blog/Denver_Downtown2.jpeg)
+![image](/assets/blog/Denver_Downtown2.jpeg)
 
-![image](../assets/blog/Denver_Downtown1.jpeg)
+![image](/assets/blog/Denver_Downtown1.jpeg)
 
 
 
 ### Hiking
 
-![image](../assets/blog/Denver_Hiking1.jpg)
+![image](/assets/blog/Denver_Hiking1.jpg)
 
-![image](../assets/blog/Denver_Red_Rocks.jpeg)
+![image](/assets/blog/Denver_Red_Rocks.jpeg)
 
-![image](../assets/blog/Denver_Hiking2.jpg)
+![image](/assets/blog/Denver_Hiking2.jpg)
 
 
 
