--- a/_publications/2018-10-01-paper-1.md
+++ b/_publications/2018-10-01-paper-1.md
@@ -1,5 +1,5 @@
 ---
-title: "Forward modeling of ocean-bottom cable data and wave-mode separation in fluid–solid elastic media with irregular seabed."
+title: "Forward modeling of ocean-bottom cable data and wave-mode separation in fluid–solid elastic media with irregular seabed"
 collection: publications
 permalink: /publication/2018-10-01-paper-1
 excerpt: 'This paper develops an acoustic–elastic forward modeling and vector-based P- and S-wave separation method.'
