--- a/_publications/2020-12-01-paper-2.md
+++ b/_publications/2020-12-01-paper-2.md
@@ -1,5 +1,5 @@
 ---
-title: "Ambient noise surface wave reverse time migration for fault imaging."
+title: "Ambient noise surface wave reverse time migration for fault imaging"
 collection: publications
 permalink: /publication/2022-12-01-paper-2
 excerpt: 'This paper proposes a transmitted surface wave Reverse Time Migration method.'
