--- a/_publications/2022-4-01-paper-4.md
+++ b/_publications/2022-4-01-paper-4.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2022-4-01-paper-4
 excerpt: 'This paper proposes a transmitted body wave Reverse Time Migration method.'
 date: 2022-4-01
-venue: '***Submitted***'
+venue: 'Submitted'
 paperurl: ''
 citation: ''
 ---
