--- a/_publications/2022-4-30-paper-6.md
+++ b/_publications/2022-4-30-paper-6.md
@@ -1,10 +1,10 @@
 ---
-title: "SWIT: A GUI-based full-waveform inversion package with flexible workflow."
+title: "SWIT: A GUI-based full-waveform inversion package with flexible workflow"
 collection: publications
 permalink: /publication/2022-4-30-paper-6
 excerpt: ''
 date: 2022-4-30
-venue: '***In preparation***'
+venue: 'In preparation'
 paperurl: ''
 citation: ''
 ---
