--- a/_publications/2022-4-28-paper-5.md
+++ b/_publications/2022-4-28-paper-5.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2022-4-28-paper-5
 excerpt: ''
 date: 2022-4-28
-venue: '***In revision***'
+venue: 'In revision'
 paperurl: ''
 citation: ''
 ---
