--- a/_code/2022-SWIT-1.0.md
+++ b/_code/2022-SWIT-1.0.md
@@ -1,8 +1,8 @@
 ---
 title: "Seismic Waveforn Inversion Toolbox-1.0"
-collection: teaching
+collection: code
 type: "FWI Softeware with GUI"
-permalink: /teaching/2014-spring-teaching-1
+permalink: /code/2014-spring-code-1
 venue: "Fortran, Python"
 date: 2022-01-01
 #location: "City, Country"
