--- a/_code/2022-SWIT-1.0.md
+++ b/_code/2022-SWIT-1.0.md
@@ -1,5 +1,5 @@
 ---
-title: "Seismic Waveforn Inversion Toolbox-1.0"
+title: "SWIT-1.0"
 collection: code
 type: "FWI Softeware with GUI"
 permalink: /code/2014-spring-code-1
@@ -8,7 +8,7 @@ date: 2022-01-01
 #location: "City, Country"
 ---
 
-Available from: [https://github.com/Haipeng-ustc/SWIT-1.0](https://github.com/Haipeng-ustc/SWIT-1.0).
+Seismic Waveforn Inversion Toolbox-1.0, available from: [https://github.com/Haipeng-ustc/SWIT-1.0](https://github.com/Haipeng-ustc/SWIT-1.0).
 
 
 
