--- a/_code/2022-SWIT-1.0.md
+++ b/_code/2022-SWIT-1.0.md
@@ -1,8 +1,9 @@
 ---
 title: "SWIT-1.0"
-collection: code
+excerpt: "<br/><img src='/assets/code/SWIT-GUI.png'>"
+collection: Code
 type: "FWI Softeware with GUI"
-permalink: /code/2014-spring-code-1
+permalink: /code/2022-SWIT-1.0
 venue: "Fortran, Python"
 date: 2022-01-01
 #location: "City, Country"
