--- a/talkmap.ipynb
+++ b/talkmap.ipynb
@@ -20,11 +20,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: getorg in /home/vm/anaconda3/lib/python3.5/site-packages\n",
-      "Requirement already up-to-date: geopy in /home/vm/.local/lib/python3.5/site-packages (from getorg)\n",
-      "Requirement already up-to-date: retrying in /home/vm/.local/lib/python3.5/site-packages (from getorg)\n",
-      "Requirement already up-to-date: pygithub in /home/vm/anaconda3/lib/python3.5/site-packages (from getorg)\n",
-      "Requirement already up-to-date: six>=1.7.0 in /home/vm/.local/lib/python3.5/site-packages (from retrying->getorg)\n",
+      "Requirement already satisfied: getorg in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (0.3.1)\n",
+      "Requirement already satisfied: pygithub in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from getorg) (1.55)\n",
+      "Requirement already satisfied: geopy in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from getorg) (2.2.0)\n",
+      "Requirement already satisfied: retrying in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from getorg) (1.3.3)\n",
+      "Requirement already satisfied: geographiclib<2,>=1.49 in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from geopy->getorg) (1.50)\n",
+      "Requirement already satisfied: deprecated in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from pygithub->getorg) (1.2.13)\n",
+      "Requirement already satisfied: pynacl>=1.4.0 in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from pygithub->getorg) (1.5.0)\n",
+      "Requirement already satisfied: requests>=2.14.0 in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from pygithub->getorg) (2.23.0)\n",
+      "Requirement already satisfied: pyjwt>=2.0 in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from pygithub->getorg) (2.3.0)\n",
+      "Requirement already satisfied: six>=1.7.0 in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from retrying->getorg) (1.14.0)\n",
+      "Requirement already satisfied: cffi>=1.4.1 in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from pynacl>=1.4.0->pygithub->getorg) (1.14.0)\n",
+      "Requirement already satisfied: chardet<4,>=3.0.2 in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from requests>=2.14.0->pygithub->getorg) (3.0.4)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from requests>=2.14.0->pygithub->getorg) (2020.4.5.1)\n",
+      "Requirement already satisfied: idna<3,>=2.5 in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from requests>=2.14.0->pygithub->getorg) (2.9)\n",
+      "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from requests>=2.14.0->pygithub->getorg) (1.25.8)\n",
+      "Requirement already satisfied: wrapt<2,>=1.10 in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from deprecated->pygithub->getorg) (1.12.1)\n",
+      "Requirement already satisfied: pycparser in /Users/haipeng/opt/anaconda3/lib/python3.7/site-packages (from cffi>=1.4.1->pynacl>=1.4.0->pygithub->getorg) (2.20)\n",
+      "\u001b[33mWARNING: You are using pip version 21.3.1; however, version 22.0.4 is available.\n",
+      "You should consider upgrading via the '/Users/haipeng/opt/anaconda3/bin/python -m pip install --upgrade pip' command.\u001b[0m\n",
       "IPywidgets and ipyleaflet support enabled.\n"
      ]
     }
@@ -53,7 +67,20 @@
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ConfigurationError",
+     "evalue": "Using Nominatim with default or sample `user_agent` \"geopy/2.2.0\" is strongly discouraged, as it violates Nominatim's ToS https://operations.osmfoundation.org/policies/nominatim/ and may possibly cause 403 and 429 HTTP errors. Please specify a custom `user_agent` with `Nominatim(user_agent=\"my-application\")` or by overriding the default `user_agent`: `geopy.geocoders.options.default_user_agent = \"my-application\"`.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mConfigurationError\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-3-cd980ae579e7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mgeocoder\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mNominatim\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mlocation_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mlocation\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mpermalink\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mtitle\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.7/site-packages/geopy/geocoders/nominatim.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, timeout, proxies, domain, scheme, user_agent, ssl_context, adapter_factory)\u001b[0m\n\u001b[1;32m    112\u001b[0m                 \u001b[0;34m'overriding the default `user_agent`: '\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    113\u001b[0m                 \u001b[0;34m'`geopy.geocoders.options.default_user_agent = \"my-application\"`.'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 114\u001b[0;31m                 \u001b[0;34m%\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mheaders\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'User-Agent'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    115\u001b[0m             )\n\u001b[1;32m    116\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mConfigurationError\u001b[0m: Using Nominatim with default or sample `user_agent` \"geopy/2.2.0\" is strongly discouraged, as it violates Nominatim's ToS https://operations.osmfoundation.org/policies/nominatim/ and may possibly cause 403 and 429 HTTP errors. Please specify a custom `user_agent` with `Nominatim(user_agent=\"my-application\")` or by overriding the default `user_agent`: `geopy.geocoders.options.default_user_agent = \"my-application\"`."
+     ]
+    }
+   ],
    "source": [
     "geocoder = Nominatim()\n",
     "location_dict = {}\n",
@@ -70,17 +97,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Berkeley CA, USA \n",
-      " Berkeley, Alameda County, California, United States of America\n",
-      "Los Angeles, CA \n",
-      " LA, Los Angeles County, California, United States of America\n",
-      "London, UK \n",
-      " London, Greater London, England, UK\n",
-      "San Francisco, California \n",
-      " SF, California, United States of America\n"
+     "ename": "NameError",
+     "evalue": "name 'geocoder' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-570d03efa004>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mlocation_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlocation\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgeocoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgeocode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocation\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlocation\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"\\n\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlocation_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mlocation\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'geocoder' is not defined"
      ]
     }
    ],
@@ -135,10 +159,13 @@
  ],
  "metadata": {
   "anaconda-cloud": {},
+  "interpreter": {
+   "hash": "7b70f00283ee96042e044c136c58a1da1eaeb789f0d0c2fd3044eb4d82b4a980"
+  },
   "kernelspec": {
    "display_name": "Python [Root]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -150,7 +177,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
