--- a/_publications/2022-04-28-paper-5.md
+++ b/_publications/2022-04-28-paper-5.md
@@ -1,5 +1,5 @@
 ---
-title: "Continent-continent collision between the South and North China plates revealed by full-waveform inversion and deep seismic profiling at Tanlu fault zone"
+title: "5. Continent-continent collision between the South and North China plates revealed by full-waveform inversion and deep seismic profiling at Tanlu fault zone"
 collection: publications
 permalink: /publication/2022-04-28-paper-5
 excerpt: ''
@@ -10,5 +10,5 @@ citation: ''
 ---
 [Download paper here]()
 
-Recommended citation: **Li, H.**, Li, J., Luo, S., Bem, S., Yao, H., & Huang, X. (2021). Continent-continent collision between the South and North China plates revealed by full-waveform inversion and deep seismic profiling at Tanlu fault zone. ***In revision***.
+Citation: **Li, H.**, Li, J., Luo, S., Bem, S., Yao, H., & Huang, X. (2021). Continent-continent collision between the South and North China plates revealed by full-waveform inversion and deep seismic profiling at Tanlu fault zone. ***In revision***.
 
