--- a/_publications/2022-04-30-paper-6.md
+++ b/_publications/2022-04-30-paper-6.md
@@ -8,6 +8,6 @@ venue: 'In preparation'
 paperurl: ''
 citation: ''
 ---
-[Download paper here](http://academicpages.github.io/files/paper2.pdf)
+[Download paper here]()
 
-Recommended citation: **Li, H.** & Li, J. (2021). SWIT: A GUI-based full-waveform inversion package with flexible workflow. ***In preparation***.
+Citation: **Li, H.** & Li, J. (2021). SWIT: A GUI-based full-waveform inversion package with flexible workflow. ***In preparation***.
