--- a/_talks/2021-07-08-tutorial.md
+++ b/_talks/2021-07-08-tutorial.md
@@ -1,9 +1,9 @@
 ---
-title: "Full-waveform Inversion: Theory, Implementation, and Applications"
+title: "第七届地震学算法与程序培训班"
 collection: talks
 type: "Tutorial"
 permalink: /talks/2013-03-01-tutorial-1
-venue: "第七届地震学算法与程序培训班"
+venue: "Full-waveform Inversion: Theory, Implementation, and Applications"
 date: 2021-07-08
 location: "Hefei, China"
 ---
