--- a/_talks/2021-09-20-talk.md
+++ b/_talks/2021-09-20-talk.md
@@ -1,15 +1,11 @@
 ---
-title: "Application of full-waveform tomography on deep seismic profiling dataset for tectonic fault characterization"
+title: "First International Meeting for Applied Geoscience & Energy"
 collection: talks
 type: "Talk"
 permalink: /talks/2021-09-20-talk
-venue: "First International Meeting for Applied Geoscience & Energy"
+venue: "Application of full-waveform tomography on deep seismic profiling dataset for tectonic fault characterization"
 date: 2021-09-20
 location: "Denver, USA"
 ---
-
-[More information here](http://example2.com)
-
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
 
 **Li, H.**, Li, J., Liu, B., & Huang, X. (2021). Application of full-waveform tomography on deep seismic profiling dataset for tectonic fault characterization. In *First International Meeting for Applied Geoscience & Energy Expanded Abstracts* (pp. 657–661), Denver, USA. [Link](https://doi.org/10.1190/segam2021-3583190.1)
