--- a/_talks/2021-05-01-talk.md
+++ b/_talks/2021-05-01-talk.md
@@ -1,9 +1,9 @@
 ---
-title: "Application of active-source full-waveform inversion and passive-source ambient noise tomography in high-resolution urban subsurface investigation"
+title: "The 5th National Youth Geological Conference"
 collection: talks
 type: "Talk"
 permalink: /talks/2021-05-01-talk
-venue: "The 5th National Youth Geological Conference"
+venue: "Application of active-source full-waveform inversion and passive-source ambient noise tomography in high-resolution urban subsurface investigation"
 date: 2021-05-01
 location: "Guiyang, China"
 ---
