--- a/_talks/2021-09-21-talk.md
+++ b/_talks/2021-09-21-talk.md
@@ -1,15 +1,11 @@
 ---
-title: "2D acoustic full-waveform inversion based on hybrid misfit functions (**Best Student Presentation**)"
+title: "中国石油学会2021年物探技术研讨会"
 collection: talks
 type: "Talk"
 permalink: /talks/2021-09-21-talk
-venue: "中国石油学会2021年物探技术研讨会"
+venue: "2D acoustic full-waveform inversion based on hybrid misfit functions"
 date: 2021-09-21
 location: "Chengdu, China"
 ---
-
-[More information here](http://example2.com)
-
-This is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!
 
 **Li, H.**, & Li, J. (2021). 2D acoustic full-waveform inversion based on hybrid misfit functions. 中国石油学会2021年物探技术研讨会, Chengdu, China. (**Best Student Presentation**)
