--- a/_publications/2022-04-28-paper-5.md
+++ b/_publications/2022-04-28-paper-5.md
@@ -1,12 +1,12 @@
 ---
-title: "5. Continent-continent collision between the South and North China plates revealed by full-waveform inversion and deep seismic profiling at Tanlu fault zone"
+title: "Continent-continent collision between the South and North China plates revealed by full-waveform inversion and deep seismic profiling at Tanlu fault zone"
 collection: publications
 permalink: /publication/2022-04-28-paper-5
-excerpt: ''
-date: 2022-4-28
-venue: 'In revision'
-paperurl: ''
-citation: ''
+# excerpt: ''
+# date: 2022-4-28
+# venue: 'In revision'
+# paperurl: ''
+# citation: ''
 ---
 [Download paper here]()
 
