--- a/_publications/2022-04-30-paper-6.md
+++ b/_publications/2022-04-30-paper-6.md
@@ -2,12 +2,12 @@
 title: "SWIT: A GUI-based full-waveform inversion package with flexible workflow"
 collection: publications
 permalink: /publication/2022-04-30-paper-6
-excerpt: ''
-date: 2022-4-30
-venue: 'In preparation'
-paperurl: ''
-citation: ''
+# excerpt: ''
+# date: 2022-4-30
+# venue: 'In preparation'
+# paperurl: ''
 ---
 [Download paper here]()
 
 Citation: **Li, H.** & Li, J. (2021). SWIT: A GUI-based full-waveform inversion package with flexible workflow. ***In preparation***.
+
