--- a/_talks/2021-05-01-talk.md
+++ b/_talks/2021-05-01-talk.md
@@ -3,7 +3,7 @@ title: "The 5th National Youth Geological Conference"
 collection: talks
 type: "Talk"
 permalink: /talks/2021-05-01-talk
-venue: "Application of active-source full-waveform inversion and passive-source ambient noise tomography in high-resolution urban subsurface investigation"
+# venue: "Application of active-source full-waveform inversion and passive-source ambient noise tomography in high-resolution urban subsurface investigation"
 date: 2021-05-01
 location: "Guiyang, China"
 ---
