--- a/_talks/2021-09-20-talk.md
+++ b/_talks/2021-09-20-talk.md
@@ -3,7 +3,7 @@ title: "First International Meeting for Applied Geoscience & Energy"
 collection: talks
 type: "Talk"
 permalink: /talks/2021-09-20-talk
-venue: "Application of full-waveform tomography on deep seismic profiling dataset for tectonic fault characterization"
+# venue: "Application of full-waveform tomography on deep seismic profiling dataset for tectonic fault characterization"
 date: 2021-09-20
 location: "Denver, USA"
 ---
