--- a/_talks/2021-09-28-talk.md
+++ b/_talks/2021-09-28-talk.md
@@ -3,7 +3,7 @@ title: "82nd EAGE Annual Conference & Exhibition"
 collection: talks
 type: "Talk"
 permalink: /talks/2021-09-28-talk
-venue: "A multi-axial perfectly matched layer for finite-element time-domain simulation of elastic wave propagation"
+# venue: "A multi-axial perfectly matched layer for finite-element time-domain simulation of elastic wave propagation"
 date: 2021-09-28
 location: "Amsterdam, Netherlands"
 ---
