--- a/_talks/2021-09-29-talk.md
+++ b/_talks/2021-09-29-talk.md
@@ -3,7 +3,7 @@ title: "82nd EAGE Annual Conference & Exhibition"
 collection: talks
 type: "Talk"
 permalink: /talks/2021-09-29-talk
-venue: "Ambient noise reverse time migration based on velocity flood for fault imaging"
+# venue: "Ambient noise reverse time migration based on velocity flood for fault imaging"
 date: 2021-09-29
 location: "Amsterdam, Netherlands"
 ---
