--- a/_publications/2021-03-01-paper-3.md
+++ b/_publications/2021-03-01-paper-3.md
@@ -1,5 +1,5 @@
 ---
-title: "3. A multi-axial perfectly matched layer for finite-element time-domain simulation of anisotropic elastic wave propagation"
+title: "A multi-axial perfectly matched layer for finite-element time-domain simulation of anisotropic elastic wave propagation"
 collection: publications
 permalink: /publication/2021-03-01-paper-3
 excerpt: 'This paper proposes a novel multi-axial perfectly matched layer.'
