--- a/_publications/2022-04-01-paper-4.md
+++ b/_publications/2022-04-01-paper-4.md
@@ -1,12 +1,12 @@
 ---
-title: "4. Earth’s interior imaging with transmitted wave reverse time migration: a numerical study"
+title: "Earth’s interior imaging with transmitted wave reverse time migration: a numerical study"
 collection: publications
 permalink: /publication/2022-04-01-paper-4
 excerpt: 'This paper proposes a transmitted body wave Reverse Time Migration method.'
 date: 2022-4-01
-venue: 'In revision for BSSA'
-paperurl: ''
-citation: ''
+# venue: 'In revision for BSSA'
+# paperurl: ''
+# citation: ''
 ---
 [Download paper here]()
 
