--- a/_talks/2021-09-21-talk.md
+++ b/_talks/2021-09-21-talk.md
@@ -3,7 +3,7 @@ title: "中国石油学会2021年物探技术研讨会"
 collection: talks
 type: "Talk"
 permalink: /talks/2021-09-21-talk
-venue: "2D acoustic full-waveform inversion based on hybrid misfit functions"
+# venue: "2D acoustic full-waveform inversion based on hybrid misfit functions"
 date: 2021-09-21
 location: "Chengdu, China"
 ---
