--- a/_talks/2022-10-01-talk.md
+++ b/_talks/2022-10-01-talk.md
@@ -3,7 +3,7 @@ title: "2021 Annual Meeting of Chinese Geoscience Union"
 collection: talks
 type: "Conference talk"
 permalink: /talks/2014-03-01-talk-3
-venue: "Formation and evolution of the southern segment of the Tanlu fault zone: evidence from full-waveform inversion and deep seismic profiling"
+# venue: "Formation and evolution of the southern segment of the Tanlu fault zone: evidence from full-waveform inversion and deep seismic profiling"
 date: 2022-10-01
 location: "Zhuhai, China"
 ---
