--- a/_code/2022-SWIT-1.0.md
+++ b/_code/2022-SWIT-1.0.md
@@ -4,8 +4,8 @@ excerpt: "<br/><img src='/assets/code/SWIT-GUI.png'>"
 collection: Code
 type: "FWI Softeware with GUI implemented in Fortran & Python"
 permalink: /code/2022-SWIT-1.0
-#venue: ""
-#date: 2022-01-01
+venue: "Full-waveform Inversion code"
+date: 2022-01-01
 #location: "City, Country"
 ---
 
