--- a/_code/2022-SWIT-1.0.md
+++ b/_code/2022-SWIT-1.0.md
@@ -1,10 +1,10 @@
 ---
 title: "SWIT-1.0"
-excerpt: "<br/><img src='/assets/code/SWIT-GUI.png'>"
+excerpt: "<br/><img src='/assets/code/GUI.png'>"
 collection: Code
-type: "FWI Softeware with GUI implemented in Fortran & Python"
+type: "Full-waveform Inversion code with GUI"
 permalink: /code/2022-SWIT-1.0
-venue: "Full-waveform Inversion code"
+# venue: "Full-waveform Inversion code"
 date: 2022-01-01
 #location: "City, Country"
 ---
