--- a/_talks/2021-05-01-talk.md
+++ b/_talks/2021-05-01-talk.md
@@ -8,4 +8,4 @@ date: 2021-05-01
 location: "Guiyang, China"
 ---
 
-Ni, H., **Li, H.**, Miao, P., Deng, B., Lin, Y., & Li, J. (2021). Application of active-source full-waveform inversion and passive-source ambient noise tomography in high-resolution urban subsurface investigation. In *The 5th National Youth Geological Conference*, China.
+Ni, H., **Li, H.**, Miao, P., Deng, B., Lin, Y., & Li, J. (2021). Application of active-source full-waveform inversion and passive-source ambient noise tomography in high-resolution urban subsurface investigation. China.
