--- a/_talks/2021-09-21-talk.md
+++ b/_talks/2021-09-21-talk.md
@@ -8,4 +8,4 @@ date: 2021-09-21
 location: "Chengdu, China"
 ---
 
-**Li, H.**, & Li, J. (2021). 2D acoustic full-waveform inversion based on hybrid misfit functions. 中国石油学会2021年物探技术研讨会, Chengdu, China. (**Best Student Presentation**)
+**Li, H.**, & Li, J. (2021). 2D acoustic full-waveform inversion based on hybrid misfit functions. Chengdu, China. (**Best Student Presentation**)
