--- a/_talks/2021-09-28-talk.md
+++ b/_talks/2021-09-28-talk.md
@@ -8,4 +8,4 @@ date: 2021-09-28
 location: "Amsterdam, Netherlands"
 ---
 
-**Li, H.**, Chen, J., Zhao, Z., & Li, J. (2021). A multi-axial perfectly matched layer for finite-element time-domain simulation of elastic wave propagation. In *82nd EAGE Annual Conference & Exhibition* (Vol. 2021, No. 1, pp. 1-5), Amsterdam, Netherlands. [Link](https://doi.org/10.3997/2214-4609.202010441)
+**Li, H.**, Chen, J., Zhao, Z., & Li, J. (2021). A multi-axial perfectly matched layer for finite-element time-domain simulation of elastic wave propagation. Amsterdam, Netherlands. [Link](https://doi.org/10.3997/2214-4609.202010441)
