--- a/_publications/2018-10-01-paper-1.md
+++ b/_publications/2018-10-01-paper-1.md
@@ -5,7 +5,7 @@ permalink: /publication/2018-10-01-paper-1
 excerpt: 'This paper develops an acoustic–elastic forward modeling and vector-based P- and S-wave separation method.'
 date: 2018-10-01
 venue: 'Applied Geophysics'
-paperurl: 'https://doi.org/10.1007/s11770-018-0699-0'
+# paperurl: 'https://doi.org/10.1007/s11770-018-0699-0'
 ---
 In marine seismic exploration, ocean-bottom cable techniques accurately record the multicomponent seismic wavefield; however, the seismic wave propagation in fluid–solid media cannot be simulated by a single wave equation. In addition, when the seabed interface is irregular, traditional finite-difference schemes cannot simulate the seismic wave propagation across the irregular seabed interface. Therefore, an acoustic–elastic forward modeling and vector-based P- and S-wave separation method is proposed. In this method, we divide the fluid–solid elastic media with irregular interface into orthogonal grids and map the irregular interface in the Cartesian coordinates system into a horizontal interface in the curvilinear coordinates system of the computational domain using coordinates transformation. The acoustic and elastic wave equations in the curvilinear coordinates system are applied to the fluid and solid medium, respectively. At the irregular interface, the two equations are combined into an acoustic–elastic equation in the curvilinear coordinates system. We next introduce a full staggered-grid scheme to improve the stability of the numerical simulation. Thus, separate P- and S-wave equations in the curvilinear coordinates system are derived to realize the P- and S-wave separation method.
 
