--- a/_talks/2021-09-20-talk.md
+++ b/_talks/2021-09-20-talk.md
@@ -8,4 +8,4 @@ date: 2021-09-20
 location: "Denver, USA"
 ---
 
-**Li, H.**, Li, J., Liu, B., & Huang, X. (2021). Application of full-waveform tomography on deep seismic profiling dataset for tectonic fault characterization. In *First International Meeting for Applied Geoscience & Energy Expanded Abstracts* (pp. 657–661), Denver, USA. [Link](https://doi.org/10.1190/segam2021-3583190.1)
+**Li, H.**, Li, J., Liu, B., & Huang, X. (2021). Application of full-waveform tomography on deep seismic profiling dataset for tectonic fault characterization. Denver, USA. [Link](https://doi.org/10.1190/segam2021-3583190.1)
