--- a/_code/2022-SWIT-1.0.md
+++ b/_code/2022-SWIT-1.0.md
@@ -4,7 +4,7 @@ excerpt: "<br/><img src='/assets/code/GUI.png'>"
 collection: Code
 type: "Full-waveform Inversion code with GUI"
 permalink: /code/2022-SWIT-1.0
-# venue: "Full-waveform Inversion code"
+venue: "Python, Fortran"
 date: 2022-01-01
 #location: "City, Country"
 ---
