--- a/_publications/2022-04-28-paper-5.md
+++ b/_publications/2022-04-28-paper-5.md
@@ -8,7 +8,7 @@ permalink: /publication/2022-04-28-paper-5
 # paperurl: ''
 # citation: ''
 ---
-[Download paper here]()
+<!-- [Download paper here]() -->
 
 Citation: **Li, H.**, Li, J., Luo, S., Bem, S., Yao, H., & Huang, X. (2021). Continent-continent collision between the South and North China plates revealed by full-waveform inversion and deep seismic profiling at Tanlu fault zone. ***In revision***.
 
