--- a/_publications/2022-04-30-paper-6.md
+++ b/_publications/2022-04-30-paper-6.md
@@ -7,7 +7,7 @@ permalink: /publication/2022-04-30-paper-6
 # venue: 'In preparation'
 # paperurl: ''
 ---
-[Download paper here]()
+<!-- [Download paper here]() -->
 
 Citation: **Li, H.** & Li, J. (2021). SWIT: A GUI-based full-waveform inversion package with flexible workflow. ***In preparation***.
 
