--- a/_publications/2022-04-01-paper-4.md
+++ b/_publications/2022-04-01-paper-4.md
@@ -8,6 +8,6 @@ permalink: /publication/2022-04-01-paper-4
 # paperurl: ''
 # citation: ''
 ---
-[Download paper here]()
+<!-- [Download paper here]() -->
 
 Citation: **Li, H.** & Li, J. (2021). Earth’s interior imaging with transmitted wave reverse time migration: a numerical study. ***In revision for BSSA***.
