--- a/_code/2022-FWI.md
+++ b/_code/2022-FWI.md
@@ -3,7 +3,7 @@ title: "Seismic Waveform Inversion Toobox-1.0"
 excerpt: "<br/><img src='/assets/code/GUI.png'>"
 collection: Code
 type: "Full-waveform Inversion code with GUI"
-# permalink: /code/2021-SeisSEM2D
+# permalink: /code/2022-FWI
 venue: "Python and Fortran"
 date: 2022-01-01
 #location: "City, Country"
