--- a/_code/2022-FWI.md
+++ b/_code/2022-FWI.md
@@ -13,13 +13,11 @@ Svailable from: [https://github.com/Haipeng-ustc/SWIT-1.0](https://github.com/Ha
 
 * SWIT-1.0 is an FWI platform written in Fortran (wavefield modeling) and Python (nonlinear inversion & data preprocessing). 
 SWIT-1.0 currently supports 2D inversion based on acoustic wave equation. More features are coming soon. 
-
   ![image](/assets/code/GUI.png)
 
 * Sythetic FWI examples by SWIT-1.0, also find here [examples](https://github.com/Haipeng-ustc/SWIT-1.0/tree/main/examples)
-
   ![image](/assets/code/FWI.png)
 
 * We have conducted several successful applications on land field dataset with SWIT-1.0. See our IMAGE'21 abstract: 
 
-  Li, H., Li, J., Liu, B., & Huang, X. (2021). Application of full-waveform tomography on deep seismic profiling data set for tectonic fault characterization. [Link](https://doi.org/10.1190/segam2021-3583190.1)
+Citation: Li, H., Li, J., Liu, B., & Huang, X. (2021). Application of full-waveform tomography on deep seismic profiling data set for tectonic fault characterization. [Link](https://doi.org/10.1190/segam2021-3583190.1)
