--- a/_talks/2021-07-08-tutorial.md
+++ b/_talks/2021-07-08-tutorial.md
@@ -7,4 +7,4 @@ permalink: /talks/2013-03-01-tutorial-1
 date: 2021-07-08
 location: "Hefei, China"
 ---
-Full-waveform Inversion: Theory, Implementation, and Applications [Video](http://seismo.training.ustc.edu.cn/index.php/video), [Code](https://github.com/Haipeng-ustc/SWIT-1.0), [Slides-Part1](http://seismo.training.ustc.edu.cn/public/%E6%9D%8E%E4%BF%8A%E4%BC%A6%E8%80%81%E5%B8%88%E8%AF%BE%E4%BB%B6.pdf), [Slides-Part2](http://seismo.training.ustc.edu.cn/public/SWIT%E7%A8%8B%E5%BA%8F%E4%BB%8B%E7%BB%8D.pdf)
+Full-waveform Inversion: Theory, Implementation, and Applications. [Video](http://seismo.training.ustc.edu.cn/index.php/video), [Code](https://github.com/Haipeng-ustc/SWIT-1.0), [Slides-Part1](http://seismo.training.ustc.edu.cn/public/%E6%9D%8E%E4%BF%8A%E4%BC%A6%E8%80%81%E5%B8%88%E8%AF%BE%E4%BB%B6.pdf), [Slides-Part2](http://seismo.training.ustc.edu.cn/public/SWIT%E7%A8%8B%E5%BA%8F%E4%BB%8B%E7%BB%8D.pdf)
