--- a/_publications/2022-04-01-paper-4.md
+++ b/_publications/2022-04-01-paper-4.md
@@ -10,4 +10,5 @@ permalink: /publication/2022-04-01-paper-4
 ---
 <!-- [Download paper here]() -->
 
-Citation: **Li, H.** & Li, J. (2021). Earth’s interior imaging with transmitted wave reverse time migration: a numerical study. ***In revision for BSSA***.
+Citation: **Li, H.** & Li, J. (2021). Earth’s interior imaging with transmitted wave reverse time migration: a numerical study. ***Bulletin of the Seismological Society of America, in press***.
+
