--- a/_code/2022-FWI.md
+++ b/_code/2022-FWI.md
@@ -1,5 +1,5 @@
 ---
-title: "Seismic Waveform Inversion Toobox-1.0"
+title: "SWIT-1.0"
 excerpt: "<br/><img src='/assets/code/GUI.png'>"
 collection: Code
 type: "Full-waveform Inversion code with GUI"
@@ -11,7 +11,7 @@ date: 2022-01-01
 
 Svailable from: [https://github.com/Haipeng-ustc/SWIT-1.0](https://github.com/Haipeng-ustc/SWIT-1.0).
 
-* SWIT-1.0 is an FWI platform written in Fortran (wavefield modeling) and Python (nonlinear inversion & data preprocessing). 
+* Seismic Waveform Inversion Toobox-1.0 (SWIT-1.0) is an FWI platform written in Fortran (wavefield modeling) and Python (nonlinear inversion & data preprocessing). 
 SWIT-1.0 currently supports 2D inversion based on acoustic wave equation. More features are coming soon. 
   ![image](/assets/code/GUI.png)
 
